baml_language/crates/baml_tests/snapshots/broken_syntax/optional_parameter_defaults/baml_tests__broken_syntax__optional_parameter_defaults__02_parser__callback_param_defaults.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "call_with_defaulted_callback"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "callback"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "x"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          COMMA ","
          FUNCTION_TYPE_PARAM
            WORD "y"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
            EQUALS "="
            INTEGER_LITERAL "10"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "string"
            WORD "string"
      COMMA ","
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "callback"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG "x"
              WORD "x"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
error: default expressions are not allowed in function types
   ╭─[ callback_param_defaults.baml:7:67 ]
   │
 7 │ function call_with_defaulted_callback(callback: (x: int, y: int = 10) -> string, x: int) -> string {
   │                                                                   ─┬  
   │                                                                    ╰── default expressions are not allowed in function types
   │ 
   │ Note: Error code: E0010
───╯
