baml_language/crates/baml_tests/snapshots/broken_syntax/optional_parameter_defaults/baml_tests__broken_syntax__optional_parameter_defaults__02_parser__function_type_defaults.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "BadDefaultInFunctionType"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "query"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      COMMA ","
      FUNCTION_TYPE_PARAM
        WORD "max_results"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
        EQUALS "="
        INTEGER_LITERAL "10"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"

=== ERRORS ===
Error: default expressions are not allowed in function types
   ╭─[ function_type_defaults.baml:1:68 ]
   │
 1 │ type BadDefaultInFunctionType = (query: string, max_results: int = 10) -> int
   │                                                                    ─┬  
   │                                                                     ╰── default expressions are not allowed in function types
   │ 
   │ Note: Error code: E0010
───╯
